--- a/contact.html
+++ b/contact.html
@@ -9,21 +9,17 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/src/style.css" />
-    <title>Croissants</title>
+    <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <h1 class="text-center mt-5">Croissants</h1>
-    <h3 class="text-center">a Poem:</h3>
-    <div class="poem text-center">
-      <div>Golden and flaky,</div>
-      <div>A morning delight.</div>
-      <div>Buttery goodness,</div>
-      <div>Pure joy in every bite.</div>
-    </div>
+    <h1 class="text-center">
+      Contact us at
+      <a href="mail-to:info@croissant.io">info@croissant.io</a>
+    </h1>
+    <br />
+    <br />
     <div class="navigation-links">
       <a href="/index.html" class="primary-link">Home</a>
-
       <a href="/photo.html" class="secondary-link">About</a>
       <a href="/contact.html" class="primary-link">Contact</a>
     </div>
