--- a/photo.html
+++ b/photo.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta name="croissants" description="learning about croissants" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -36,11 +38,19 @@
       Croissants are a common part of a continental breakfast in many European
       countries and served as dessert all around the world.
     </p>
-    <img src="/src/images/croissant.webp" class="croissant-photo" />
+    <img
+      src="/src/images/croissant.webp"
+      alt="croissant-photo"
+      class="croissant-photo"
+    />
     <div class="navigation-links">
-      <a href="/index.html" class="primary-link">Home</a>
-      <a href="/photo.html" class="secondary-link">About</a>
-      <a href="/contact.html" class="primary-link">Contact</a>
+      <a href="/index.html" title="home page" class="primary-link">Home</a>
+      <a href="/photo.html" title="photo about page" class="secondary-link"
+        >About</a
+      >
+      <a href="/contact.html" title="contact page" class="primary-link"
+        >Contact</a
+      >
     </div>
   </body>
 </html>
